{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 5,
  "lineage": "db9457a5-346c-9494-b93e-15c4885452d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "iti_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b806f3bf013cfa0d",
            "owner_id": "174871937336",
            "vpc_id": "vpc-00a5d36075181013b"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05edc3745d900a2d6",
            "owner_id": "174871937336",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-00a5d36075181013b"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-011b38c4e78f6ef41",
            "owner_id": "174871937336",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b806f3bf013cfa0d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-00a5d36075181013b"
          },
          "dependencies": [
            "aws_internet_gateway.iti_igw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtass",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtpv",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:174871937336:vpc/vpc-00a5d36075181013b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c042880e34353282",
            "default_route_table_id": "rtb-0039db190b1ffcb5e",
            "default_security_group_id": "sg-001051edfc85f0374",
            "dhcp_options_id": "dopt-c9cf56b1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00a5d36075181013b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0039db190b1ffcb5e",
            "owner_id": "174871937336",
            "tags": {
              "Name": "Cloud_Vpc"
            }
          }
        }
      ]
    }
  ]
}